<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="ga_trackingId">UA-42166269-4</string>
    <string name="com.eaglerex.mcpemodificator.MainActivity">Home</string>
    <string name="com.eaglerex.mcpemodificator.help">Help</string>
    <string name="com.eaglerex.mcpemodificator.contactme">Contact Me</string>
    <string name="com.eaglerex.mcpemodificator.modsall">Mods All</string>
    <string name="com.eaglerex.mcpemodificator.mapsall">Maps All</string>
    <string name="com.eaglerex.mcpemodificator.modcreators">Mod Creators</string>
    <string name="com.eaglerex.mcpemodificator.mapcreators">Map Creators</string>
    <string name="com.eaglerex.mcpemodificator.mapcategory">Map Categories</string>
    <string name="com.eaglerex.mcpemodificator.modsshow">Download Page</string>
    <string name="com.eaglerex.mcpemodificator.sendmd">Submit Map/Mod</string>
    <string name="com.eaglerex.mcpemodificator.installmods">Install Mods</string>
    <string name="com.eaglerex.mcpemodificator.installmaps">Install Maps</string>
    <string name="app_name">MCPE Modificator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="maps">MAPS</string>
    <string name="mods">MODS</string>
    <string name="help">Help</string>
    <string name="browseAll">Browse All</string>
    <string name="browseCreator">Browse By Creator</string>
    <string name="browseCategory">Browse By Category</string>
    <string name="download">Download</string>
    <string name="open">Open Official Page</string>
    <string name="open_map">Open Official Map Page</string>
    <string name="parkour">Parkour</string>
    <string name="adventure">Adventure</string>
    <string name="creations">Creations</string>
    <string name="roller">Rollercoaster</string>
    <string name="sendmod">SUBMIT MAP/MOD</string>
    <string name="sendmap">Submit Your Map</string>
    <string name="name">Your Name :</string>
    <string name="mapname">Map Name :</string>
    <string name="modname">Mod Name :</string>
    <string name="maplink">Map Link :</string>
    <string name="modlink">Mod Link :</string>
    <string name="extra">Want To Say Something Extra ? :</string>
    <string name="send">Send Via Mail</string>
    <string name="build">Builds</string>
    <string name="pvp">PVP</string>
</resources>
