<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff8f8f8f" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:id="@id/parkour" android:background="@drawable/testbutton" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/parkour" />
            <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:id="@id/roller" android:background="@drawable/testbutton" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/roller" />
            <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:id="@id/build" android:background="@drawable/testbutton" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/build" />
            <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:id="@id/pvp" android:background="@drawable/testbutton" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/pvp" />
            <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:id="@id/adv" android:background="@drawable/testbutton" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="Adventure" />
            <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:id="@id/sur" android:background="@drawable/testbutton" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="Survival" />
            <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:id="@id/minigames" android:background="@drawable/testbutton" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="Minigames" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>