<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff8f8f8f" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="300.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/mods" android:background="@drawable/homebuttons" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="100.0">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/mod" android:contentDescription="mod" />
        <TextView android:textSize="75.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/bMods" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mods" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/maps" android:background="@drawable/homebuttons" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_weight="100.0">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/map" android:contentDescription="map" />
        <TextView android:textSize="75.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/bMaps" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/maps" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/submit" android:background="@drawable/homebuttons" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="100.0">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/send" android:contentDescription="submit" />
        <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/bSendmod" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sendmod" android:textAlignment="gravity" />
    </LinearLayout>
</LinearLayout>